log
Thu 21 Mar 2024 08:20:28 PM UTC: 
 tests:  1|4
total_score: 10/70
7fd82c6
Thu 21 Mar 2024 08:36:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:8: error: expected expression before ‘=’ token
   49 |        = malloc();
      |        ^
exercises.c:49:10: error: too few arguments to function ‘malloc’
   49 |        = malloc();
      |          ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
Compilation failed
b03212d
Thu 21 Mar 2024 08:42:06 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a47ca1a
Thu 21 Mar 2024 08:42:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:19: error: ‘dato’ undeclared (first use in this function)
   50 |       pushBack(L, dato);
      |                   ^~~~
exercises.c:50:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d3cf18e
Thu 21 Mar 2024 08:42:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
943b0c0
Thu 21 Mar 2024 08:43:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
a10e47d
Thu 21 Mar 2024 08:51:23 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |       suma += elemento;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
2e0d64b
Thu 21 Mar 2024 08:51:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
338d791
Thu 21 Mar 2024 08:52:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:15: error: dereferencing ‘void *’ pointer [-Werror]
   65 |       suma += *elemento;
      |               ^~~~~~~~~
exercises.c:65:15: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
Compilation failed
b919a8b
Thu 21 Mar 2024 08:52:39 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:19: error: dereferencing ‘void *’ pointer [-Werror]
   65 |       int* dato = *elemento
      |                   ^~~~~~~~~
exercises.c:65:19: error: void value not ignored as it ought to be
   65 |       int* dato = *elemento
      |                   ^
exercises.c:66:7: error: expected ‘,’ or ‘;’ before ‘suma’
   66 |       suma += *dato;
      |       ^~~~
exercises.c:65:12: error: unused variable ‘dato’ [-Werror=unused-variable]
   65 |       int* dato = *elemento
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
9b8826a
Thu 21 Mar 2024 08:52:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:19: error: dereferencing ‘void *’ pointer [-Werror]
   65 |       int* dato = *elemento;
      |                   ^~~~~~~~~
exercises.c:65:19: error: void value not ignored as it ought to be
   65 |       int* dato = *elemento;
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
f7395c2
Thu 21 Mar 2024 08:53:56 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:13: error: unused variable ‘elemento’ [-Werror=unused-variable]
   67 |       void *elemento = next(L);
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2026219
Thu 21 Mar 2024 08:54:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
428df2c
Thu 21 Mar 2024 08:58:15 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:86:15: error: comparison between pointer and integer [-Werror]
   86 |       if(dato == elem)
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
93e3557
Thu 21 Mar 2024 08:58:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ec38ef4
Sat 23 Mar 2024 01:48:53 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|2
total_score: 40/70
2f6a057
Sat 23 Mar 2024 01:49:12 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
389fc6d
Sat 23 Mar 2024 01:59:20 AM UTC: 
 exercises.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:13: error: unused variable ‘Tope’ [-Werror=unused-variable]
  130 |       char *Tope = (char *)top(pila);
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
e597a7a
Sat 23 Mar 2024 02:00:29 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
09212ab
Sat 23 Mar 2024 02:01:58 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
f240cb5
Sat 23 Mar 2024 02:04:47 AM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
3d864d3
Sat 23 Mar 2024 02:06:38 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
7d4384b
Sat 23 Mar 2024 02:09:03 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
f3e51df
Sat 23 Mar 2024 02:13:10 AM UTC: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
818a16a
Sat 23 Mar 2024 02:30:58 AM UTC: 
 exercises.c | 50 +++++++++++---------------------------------------
 1 file changed, 11 insertions(+), 39 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:116:3: error: expected ‘,’ or ‘;’ before ‘for’
  116 |   for(int i = 0 ; cadena[i] != '\0' ; i++)
      |   ^~~
exercises.c:116:26: error: ‘i’ undeclared (first use in this function)
  116 |   for(int i = 0 ; cadena[i] != '\0' ; i++)
      |                          ^
exercises.c:116:26: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:116:42: error: expected ‘;’ before ‘)’ token
  116 |   for(int i = 0 ; cadena[i] != '\0' ; i++)
      |                                          ^
      |                                          ;
exercises.c:116:42: error: expected statement before ‘)’ token
exercises.c:129:35: error: ‘top_char’ undeclared (first use in this function); did you mean ‘u_char’?
  129 |         if ((cadena[i] == ')' && *top_char == '(') ||
      |                                   ^~~~~~~~
      |                                   u_char
exercises.c:128:15: error: unused variable ‘ultimo’ [-Werror=unused-variable]
  128 |         char *ultimo = (char *)top(pila);
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4f9ae6c
Sat 23 Mar 2024 02:31:12 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:116:3: error: expected ‘,’ or ‘;’ before ‘for’
  116 |   for(int i = 0 ; cadena[i] != '\0' ; i++)
      |   ^~~
exercises.c:116:26: error: ‘i’ undeclared (first use in this function)
  116 |   for(int i = 0 ; cadena[i] != '\0' ; i++)
      |                          ^
exercises.c:116:26: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:116:42: error: expected ‘;’ before ‘)’ token
  116 |   for(int i = 0 ; cadena[i] != '\0' ; i++)
      |                                          ^
      |                                          ;
exercises.c:116:42: error: expected statement before ‘)’ token
Compilation failed
ec786fc
Sat 23 Mar 2024 02:31:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
fe03902
Sat 23 Mar 2024 02:59:50 AM UTC: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:118:30: error: expected ‘;’ before ‘}’ token
  118 |       digito = next(Pila_Aux)
      |                              ^
      |                              ;
  119 |     }
      |     ~                         
Compilation failed
257f0a5
Sat 23 Mar 2024 02:59:57 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4c4f151
Sat 23 Mar 2024 03:00:24 AM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
e887a46
Sat 23 Mar 2024 03:02:20 AM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  8|1
total_score: 60/70
677174c
